book image distortion on first load hopefully fixed in prod

--- a/app/assets/stylesheets/components/_books.scss
+++ b/app/assets/stylesheets/components/_books.scss
@@ -7,6 +7,8 @@
   img{
     height: 180px;
     width: 240px;
+    object-fit: cover;
+    object-position: right;
   }
 }
 
